# vectorDB-Agentic-SAR

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
chunking/: clean_text.py  embed_chunks.py  extract_pages.py  qdrant_mock.py
chunking/data/extracted/: README.md
