[project]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "RandomCyberCoder"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
